fix: project page horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -95,15 +95,17 @@ h3 {
 }
 
 header {
-    background-color: color-mix(in srgb, var(--nico-black) 80%, transparent);
-    top: 0;
-    z-index: 9999;
+    display: flex;
     position: fixed;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    transition: top 0.4s ease-in-out;
     height: 5.5em;
+    z-index: 9999;
+    justify-content: center;
+    background-color: color-mix(in srgb, var(--nico-black) 80%, transparent);
+    backdrop-filter: blur(0.5em);
+    
+    top: 0;
+    transition: top 0.4s ease-in-out;
 
     .bar {
         width: 77em;
@@ -497,7 +499,7 @@ main {
         .foreground {
             display: flex;
             flex-direction: row;
-            width: min(77em, 100%);
+            width: min(100%, 77em);
             height: 45em;
             gap: 1em;
             align-self: center;
@@ -559,8 +561,8 @@ main {
                 gap: 1em;
 
                 .page-content {
-                    position: relative;
                     display: flex;
+                    position: relative;
                     overflow: hidden;
 
                     width: 100%;
@@ -572,7 +574,7 @@ main {
 
                     .grid {
                         display: grid;
-                        grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+                        grid-template-columns: repeat(auto-fit, minmax(min(100%, 25em), 1fr));
                         grid-auto-flow: row;
                         overflow: scroll;
 
@@ -590,7 +592,7 @@ main {
                                 height: 40%;
 
                                 img {
-                                    display: block;
+                                    display: flex;
                                     height: 100%;
                                     width: 100%;
                                     object-fit: cover;
